--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,20 @@
 </head>
 <body>
 	<h1>Hello, this is a page.</h1>
+	<h2>pages links</h2>
+	<ul>
+		<li><a href="images.html">images</a></li>
+		<li><a href="listas.html">Listas</a></li>
+		<li><a href="semantic_elements.html">Semantic elements</a></li>
+		<li><a href="css-syntax.html">Css syntax</a></li>
+		<li><a href="single-selectors.html">Single selectors</a></li>
+		<li><a href="style-placement.html">Style Placement</a></li>
+		<li><a href="child-selector-before.html">Child selector before</a></li>
+		<li><a href="descendant-selector-before.html">descendant selector before</a></li>
+		<li><a href="pseudo-selectors-before.html">Pseudo selectors before</a></li>
+		<li><a href="style-placement.html">Style placement</a></li>
+		<li><a href="inheritance.html">inheritance</a></li>
+	</ul>
+	
 </body>
 </html>
