--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,11 @@
 		<li><a href="pseudo-selectors-before.html">Pseudo selectors before</a></li>
 		<li><a href="style-placement.html">Style placement</a></li>
 		<li><a href="inheritance.html">inheritance</a></li>
+		<li><a href="specify.html">Specify</a></li>
+		<li><a href="styling-text-before.html">Styling text before</a></li>
+		<li><a href="font-size-before.html">Font size before</a></li>
+		<li><a href="box-model-before.html">Box model before</a></li>
+		<li><a href="background-before.html">Background before</a></li>
 	</ul>
 	
 </body>
