--- a/site/descendant-selector-before.html
+++ b/site/descendant-selector-before.html
@@ -25,7 +25,7 @@
     <ul>
         <li>cookies</li>
         <li>cake</li>
-        <li>pie/li>
+        <li>pie</li>
     </ul>
 </article>
 </body>
