--- a/site/index.html
+++ b/site/index.html
@@ -23,6 +23,7 @@
 		<li><a href="font-size-before.html">Font size before</a></li>
 		<li><a href="box-model-before.html">Box model before</a></li>
 		<li><a href="background-before.html">Background before</a></li>
+		<li><a href="positioning.html">positioning elements</a></li>
 	</ul>
 	
 </body>
